--- a/budgeter/src/App.css
+++ b/budgeter/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(72,250,161,0.8939950980392157) 62%, rgba(0,212,255,1) 100%);
 }
 
 .App-logo {
@@ -36,3 +38,4 @@
     transform: rotate(360deg);
   }
 }
+
